--- a/app/src/main/res/layout/fragment_add_installment.xml
+++ b/app/src/main/res/layout/fragment_add_installment.xml
@@ -42,13 +42,13 @@
                     style="@style/h3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/margin"
+                    android:layout_margin="0dp"
                     android:text="@string/charge_to" />
 
                 <Spinner
                     android:id="@+id/card_select_spinner"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
