--- a/app/src/main/res/layout/fragment_view_installment_details.xml
+++ b/app/src/main/res/layout/fragment_view_installment_details.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.github.acailuv.loanmanager.view_card.ViewCardDetailsFragmentViewModel" />
+            type="com.github.acailuv.loanmanager.view_installment.ViewInstallmentDetailsFragmentViewModel" />
     </data>
 
     <ScrollView
@@ -227,6 +227,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="@dimen/margin"
+                    android:text="@string/tenor_month"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tenor_month"
+                    style="@style/p"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/p"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/margin"
                     android:text="@string/total_loan_amount"
                     android:textAlignment="center" />
 
@@ -261,49 +283,58 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:orientation="horizontal">-->
+
+            <!--                <TextView-->
+            <!--                    style="@style/p"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_marginEnd="@dimen/margin"-->
+            <!--                    android:text="@string/already_paid_amount"-->
+            <!--                    android:textAlignment="center" />-->
+
+            <!--                <TextView-->
+            <!--                    android:id="@+id/paid_amount"-->
+            <!--                    style="@style/p"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text="" />-->
+
+            <!--            </LinearLayout>-->
+
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:orientation="horizontal">-->
+
+            <!--                <TextView-->
+            <!--                    style="@style/p"-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="match_parent"-->
+            <!--                    android:layout_marginEnd="@dimen/margin"-->
+            <!--                    android:text="@string/loan_status"-->
+            <!--                    android:textAlignment="center" />-->
+
+            <!--                <TextView-->
+            <!--                    android:id="@+id/status"-->
+            <!--                    style="@style/p"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text="" />-->
+
+            <!--            </LinearLayout>-->
+
+            <Button
+                android:id="@+id/delete_installment_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/p"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/margin"
-                    android:text="@string/already_paid_amount"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/paid_amount"
-                    style="@style/p"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    style="@style/p"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/margin"
-                    android:text="@string/loan_status"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/status"
-                    style="@style/p"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="" />
-
-            </LinearLayout>
+                android:layout_marginTop="@dimen/margin"
+                android:background="@android:color/holo_red_dark"
+                android:text="@string/delete_this_installment"
+                android:onClick="@{() -> viewModel.onDeleteButtonClicked()}"/>
 
         </LinearLayout>
 
